--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body >
     <table cellspacing="20">
       <tr>
-        <td><img src="/Images/yosi.JPG" alt="yosi profile picture" height="200" width="150">
+        <td><img src="Images/yosi.JPG" alt="yosi profile picture" height="200" width="150">
 </td>
 <td><h1>Yosef Bogale</h1>
 <p><em>Student and Worker At <strong><a href="Google.com">iCare</a></strong>.</em></p>
